--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,7 +15,7 @@ body {
 
 /* Cabeçalho */
 header {
-    background-color: #333;
+    background-color: red;
     color: #fff;
     padding: 20px 0;
     text-align: center;
