--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,9 +8,9 @@
 body {
     font-family: 'Arial', sans-serif;
     line-height: 1.6;
-    background-color: #f4f4f4;
+    background-color: #333;
     color: #333;
-    padding: 0 20px;
+   /* padding: 0 20px; */
 }
 
 /* Cabeçalho */
@@ -114,6 +114,6 @@ footer {
     text-align: center;
     background-color: #333;
     color: white;
-    padding: 20px 0;
+     /* padding: 0 20px; */
     margin-top: 40px;
 }
