--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,9 +15,9 @@ body {
 
 /* Cabeçalho */
 header {
-    background-color: red;
+    background-color: #333;
     color: #fff;
-    padding: 20px 0;
+  /*  padding: 20px 0; */
     text-align: center;
 }
 
