--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,7 +8,7 @@
 body {
     font-family: 'Arial', sans-serif;
     line-height: 1.6;
-    background-color: #333;
+    background-color: white;
     color: #333;
    /* padding: 0 20px; */
 }
